# portalis

./: .gitignore  50_MODULES_COMPLETE.md  BENCHMARKING_GUIDE.md  COMPLETE_PYTHON_TO_WASM_REQUIREMENTS.md  COMPLETION_GAPS_AND_BLOCKERS.md  COMPLETION_STAGE_ARCHITECTURE.md  COMPLETION_STAGE_FINAL_REPORT.md  COMPLETION_STAGE_SWARM_REPORT.md  CPU_COMPONENT_VALIDATION_REPORT.md  Cargo.toml  Dockerfile.test  EXECUTIVE_SUMMARY.md  EXECUTOR_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  FINAL_UPDATE_NOTES.md  IMPLEMENTATION_COMPLETE.md  IMPORT_SYSTEM_SUMMARY.md  LICENSE  MEMORY_OPTIMIZATION_TEST_STRATEGY.md  NEMO_IMPLEMENTATION_SUMMARY.md  NIM_IMPLEMENTATION_SUMMARY.md  NVIDIA_STACK_OPTIMIZATION_COMPLETE.md  OPTIMIZATION_GUIDE.md  PHASE4_SUMMARY.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_DAYS_6_7_COMPLETION.md  PHASE_1_DAY_1_COMPLETION.md  PHASE_1_DAY_2_COVERAGE.json  PHASE_1_KICKOFF.md  PHASE_1_WEEK_2_DAYS_12_19_COMPLETION.md  PHASE_1_WEEK_3_DAYS_20_25_COMPLETION.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_WEEK_12_13_PROGRESS.md  PHASE_3_KICKOFF.md  PHASE_3_WEEK_23_PROGRESS.md  PHASE_3_WEEK_24_PROGRESS.md  PLATFORM_READY.md  PYTHON_LANGUAGE_FEATURES.md  PYTHON_TO_WASM_TRANSPILER_COMPLETE.md  QA_EXECUTIVE_SUMMARY.md  (+26 more)
agents/analysis/: Cargo.toml
agents/analysis/src/: dependency_resolver.rs  flow_analyzer.rs  lib.rs
agents/cpu-bridge/: ARCHITECTURE.md  Cargo.toml  INTEGRATION_TEST_SUMMARY.md  QA_DELIVERABLES.md  README.md  SIMD_GUIDE.md  TEST_COVERAGE_REPORT.md
agents/cpu-bridge/benches/: BENCHMARK_SUMMARY.md  QUICKSTART.md  README.md  SIMD_BENCHMARK_GUIDE.md  VALIDATION.md  compare.sh  cpu_benchmarks.rs  memory_benchmarks.rs  simd_analysis.rs  simd_benchmarks.rs
agents/cpu-bridge/examples/: simd_demo.rs
agents/cpu-bridge/src/: arena.rs  config.rs  lib.rs  metrics.rs  simd.rs  thread_pool.rs
agents/cpu-bridge/tests/: integration_tests.rs  memory_optimization_tests.rs  simd_tests.rs
agents/cuda-bridge/: BENCHMARK_SUMMARY.md  Cargo.toml  PERFORMANCE_REPORT.md  WEEK_25_INDEX.md
agents/cuda-bridge/benches/: README.md  cuda_benchmarks.rs
agents/cuda-bridge/src/: lib.rs
agents/ingest/: Cargo.toml
agents/ingest/src/: enhanced_parser.rs  lib.rs  project_parser.rs
agents/ingest/tests/: project_parser_integration.rs
agents/nemo-bridge/: Cargo.toml
agents/nemo-bridge/src/: lib.rs
agents/nemo-bridge/tests/: integration_test.rs
agents/specgen/: Cargo.toml
agents/specgen/src/: lib.rs
agents/test/: Cargo.toml
agents/test/src/: lib.rs
agents/transpiler/: 20_MODULES_COMPLETE.md  50_MODULES_MILESTONE.md  API_REFERENCE.md  ARCHITECTURE.md  ASYNCIO_SUMMARY.md  ASYNCIO_TRANSLATION_COMPLETE.md  ASYNC_RUNTIME_COMPLETE.md  ASYNC_RUNTIME_IMPLEMENTATION.md  ASYNC_RUNTIME_QUICK_REFERENCE.md  CARGO_GENERATOR_COMPLETE.md  Cargo.toml  DEPLOYMENT_STATUS.md  EXAMPLES.md  FINAL_METRICS_REPORT.md  GENERIC_TRANSLATOR_IMPLEMENTATION_SUMMARY.md  GETTING_STARTED.md  IMPORT_ANALYZER_COMPLETE.md  MIGRATION_GUIDE.md  MODULE_MAPPING_SUMMARY.md  PYTHON_PARSER_IMPLEMENTATION_SUMMARY.md  README.md  STDLIB_MAPPING_PROGRESS.md  TEST_COVERAGE_REPORT.md  TEST_VALIDATION_SUMMARY.md  TROUBLESHOOTING.md  USER_GUIDE.md  WASI_CORE_IMPLEMENTATION_COMPLETE.md  WASI_FILESYSTEM_IMPLEMENTATION_SUMMARY.md  WASI_INTEGRATION_COMPLETE.md  WEBSOCKET_IMPLEMENTATION.md  test_results.txt
agents/transpiler/benches/: translation_benchmark.rs
agents/transpiler/examples/: advanced_features_demo.rs  async_runtime_demo.rs  asyncio_translation_example.rs  build_optimization_demo.rs  cargo_generator_demo.rs  class_inheritance_demo.rs  code_splitting_demo.rs  common_libraries_demo.rs  complete_wasm_workflow.rs  dead_code_elimination_demo.rs  decorator_demo.rs  expected_rust_output.rs  external_packages_demo.py  external_packages_example.rs  full_asyncio_demo.rs  generator_demo.rs  generic_demo.rs  generic_translator_demo.rs  import_analysis_demo.py  import_analyzer_example.rs  lifetime_demo.rs  multi_target_demo.rs  npm_package_demo.rs  numpy_demo.rs  pandas_demo.rs  py_to_rust_to_wasm_demo.py  reference_optimization_demo.rs  threading_demo.rs  translate_file.rs  type_inference_demo.rs  typescript_demo.rs  version_compatibility_demo.rs  version_resolution_demo.rs  wasi_directory_usage.rs  wasm_bundler_demo.rs  websocket_example.rs
agents/transpiler/src/: advanced_features.rs  asyncio_orchestrator.rs  build_optimizer.rs  cargo_generator.rs  class_inheritance.rs  class_translator.rs  code_generator.rs  code_splitter.rs  common_libraries_translator.rs  day10_11_features_test.rs  day12_13_features_test.rs  day14_15_features_test.rs  day16_17_features_test.rs  day18_19_features_test.rs  day20_21_features_test.rs  day22_23_features_test.rs  day24_25_features_test.rs  day26_27_features_test.rs  day28_29_features_test.rs  day30_features_test.rs  day3_features_test.rs  day4_5_features_test.rs  day6_7_features_test.rs  day8_9_features_test.rs  dead_code_eliminator.rs  decorator_translator.rs  dependency_graph.rs  dependency_resolver.rs  expression_translator.rs  external_packages.rs  feature_translator.rs  generator_translator.rs  generic_translator.rs  import_analyzer.rs  lib.rs  (+32 more)
agents/wassette-bridge/: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: config.rs  health.rs  main.rs
core/: Cargo.toml
core/src/: agent.rs  error.rs  lib.rs  logging.rs  message.rs  metrics.rs  quota.rs  rbac.rs  sso.rs  telemetry.rs  types.rs
cuda-acceleration/: CMakeLists.txt  DELIVERABLES.md  IMPLEMENTATION_SUMMARY.md  README.md
cuda-acceleration/kernels/: ast_parser.cu  ast_parser.cuh  embedding_generator.cu  embedding_generator.cuh  verification_kernels.cuh
nemo-integration/: INTEGRATION_GUIDE.md  README.md  pyproject.toml  requirements.txt  setup.py
nemo-integration/config/: translation_model.yaml  type_mappings.yaml
nemo-integration/examples/: simple_translation.py
nemo-integration/src/: __init__.py
nemo-integration/tests/: __init__.py  test_nemo_service.py  test_type_mapper.py  test_validator.py
orchestration/: Cargo.toml
orchestration/src/: lib.rs  workspace_generator.rs
orchestration/tests/: integration_test.rs
(+1042 files in other folders)
