[workspace]
resolver = "2"
members = [
    "core",
    "agents/ingest",
    "agents/analysis",
    "agents/specgen",
    "agents/transpiler",
    "agents/build",
    "agents/test",
    "agents/packaging",
    "agents/nemo-bridge",
    "agents/cuda-bridge",
    "orchestration",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Portalis Team"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
rustpython-parser = "0.3"
regex = "1.0"
tempfile = "3.8"
