[workspace]
resolver = "2"
members = [
    "core",
    "agents/ingest",
    "agents/analysis",
    "agents/specgen",
    "agents/transpiler",
    "agents/build",
    "agents/test",
    "agents/packaging",
    "agents/nemo-bridge",
    "agents/cuda-bridge",
    "agents/cpu-bridge",
    "agents/wassette-bridge",
    "orchestration",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Portalis Team <team@portalis.ai>"]
repository = "https://github.com/portalis/portalis"
homepage = "https://portalis.dev"
keywords = ["python", "rust", "wasm", "transpiler", "compiler"]
categories = ["compilers", "wasm", "development-tools"]
description = "GPU-accelerated Python to Rust/WASM transpiler"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
rustpython-parser = "0.4"
regex = "1.0"
tempfile = "3.8"

# Workspace-level profile configurations for build optimization
# These apply to all workspace members

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 16
strip = "debuginfo"

# Size-optimized profile for WASM (Target: <500KB)
[profile.wasm-size]
inherits = "release"
opt-level = "z"          # Optimize for size
lto = true               # Fat LTO for maximum optimization
codegen-units = 1        # Single codegen unit for better optimization
panic = "abort"          # Abort on panic (smaller binary)
strip = true             # Strip all symbols
overflow-checks = false  # Disable overflow checks for size

# Performance-optimized profile
[profile.wasm-perf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 16

# Minimum size profile (experimental, may be slower)
[profile.min-size]
inherits = "wasm-size"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug-assertions = false
