[package]
name = "portalis-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for Portalis - GPU-accelerated Python to Rust/WASM transpiler"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[[bin]]
name = "portalis"
path = "src/main.rs"

[dependencies]
portalis-core = { version = "0.1.0", path = "../core" }
portalis-orchestration = { version = "0.1.0", path = "../orchestration" }
portalis-ingest = { version = "0.1.0", path = "../agents/ingest" }
portalis-transpiler = { version = "0.1.0", path = "../agents/transpiler" }
portalis-test = { version = "0.1.0", path = "../agents/test" }
portalis-packaging = { version = "0.1.0", path = "../agents/packaging" }
tokio.workspace = true
anyhow.workspace = true
clap = { version = "4.4", features = ["derive", "cargo", "env"] }
clap_complete = "4.4"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
indicatif = "0.17"
console = "0.15"
colored = "2.0"
walkdir = "2.4"
glob = "0.3"
which = "6.0"
sysinfo = "0.30"
num_cpus = "1.16"
dirs = "5.0"
base64 = "0.21"
