[package]
name = "portalis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for the Portalis Python to Rust/WASM transpiler"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid.workspace = true
chrono.workspace = true
prometheus = "0.13"
