[package]
name = "portalis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for the Portalis Python to Rust/WASM transpiler"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid.workspace = true
chrono.workspace = true
prometheus = "0.14"
num_cpus = "1.16"
raw-cpuid = "11.0"

# Optional CUDA support
cudarc = { version = "0.9", features = ["driver"], optional = true }

# Memory optimization dependencies
bumpalo = "3.14"              # Arena allocator
dashmap = "5.5"               # Concurrent hashmap for string interning
once_cell = "1.19"            # Lazy static initialization
crossbeam = "0.8"             # Lock-free concurrent data structures

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi"] }

[features]
# Enable CUDA support for GPU acceleration
cuda = ["cudarc"]
# Enable memory optimizations
memory-opt = []
default = ["memory-opt"]
