[package]
name = "portalis-orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pipeline orchestration for multi-agent workflows"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
portalis-core = { version = "0.1.0", path = "../core" }
portalis-ingest = { version = "0.1.0", path = "../agents/ingest" }
portalis-analysis = { version = "0.1.0", path = "../agents/analysis" }
portalis-specgen = { version = "0.1.0", path = "../agents/specgen" }
portalis-transpiler = { version = "0.1.0", path = "../agents/transpiler" }
portalis-build = { version = "0.1.0", path = "../agents/build" }
portalis-test = { version = "0.1.0", path = "../agents/test" }
portalis-packaging = { version = "0.1.0", path = "../agents/packaging" }
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.8"
