[package]
name = "portalis-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Code analysis agent for Python compatibility assessment"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
portalis-core = { path = "../../core" }
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rustpython-parser.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
