[package]
name = "portalis-cpu-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Portalis Team <team@portalis.ai>"]
description = "CPU-based parallel processing bridge for Portalis transpilation platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/portalis/portalis"
keywords = ["cpu", "parallel", "transpiler", "acceleration"]
categories = ["concurrency", "development-tools"]

[dependencies]
# Parallel processing and thread pool management
rayon = "1.8"

# CPU core detection and system information
num_cpus = "1.16"

# Lock-free concurrent data structures
crossbeam = "0.8"

# High-performance synchronization primitives
parking_lot = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization for metrics and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Memory optimization
bumpalo = "3.14"              # Arena allocator
dashmap = "5.5"               # Concurrent hashmap for object pools
once_cell = "1.19"            # Lazy static initialization

# Optional: portalis-core for acceleration trait
portalis-core = { version = "0.1.0", path = "../../core", optional = true }

[features]
default = ["memory-opt"]
acceleration = ["portalis-core"]
memory-opt = []

[dev-dependencies]
# Benchmarking framework
criterion = { version = "0.7", features = ["html_reports"] }

# Testing utilities
tempfile = "3.8"

# For memory optimization tests
portalis-core = { version = "0.1.0", path = "../../core", features = ["memory-opt"] }

[[bench]]
name = "cpu_benchmarks"
harness = false

[[bench]]
name = "simd_benchmarks"
harness = false

[[bench]]
name = "memory_benchmarks"
harness = false
