[package]
name = "portalis-cuda-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
portalis-core = { path = "../../core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[features]
default = []
# Enable when CUDA library is available
cuda = []

[dev-dependencies]
tempfile.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cuda_benchmarks"
harness = false
