[package]
name = "portalis-cuda-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CUDA GPU acceleration bridge for parallel processing"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
portalis-core = { version = "0.1.0", path = "../../core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[features]
default = []
# Enable when CUDA library is available
cuda = []

[dev-dependencies]
tempfile.workspace = true
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "cuda_benchmarks"
harness = false
