[package]
name = "portalis-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
portalis-core = { path = "../../core" }
portalis-cuda-bridge = { path = "../cuda-bridge", optional = true }
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
regex = "1.10"
rustpython-parser.workspace = true

[features]
default = []
cuda = ["portalis-cuda-bridge"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
