[package]
name = "portalis-nemo-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NVIDIA NeMo LLM integration for AI-powered translation"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
portalis-core = { version = "0.1.0", path = "../../core" }
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock = "0.6"
tokio = { workspace = true, features = ["test-util"] }
