[package]
name = "portalis-test"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Testing agent for translation validation"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
portalis-core = { version = "0.1.0", path = "../../core" }
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
